force-app/main/default/objects/Case__c/fields/Signage_3__c.field-meta.xml
<CustomField>
    <fullName>Signage_3__c</fullName>
    <label>Signage 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Back Lit Signage</fullName>
            </value>
            <value>
                <fullName>Non Lit Signage</fullName>
            </value>
            <value>
                <fullName>Back Lit Flange</fullName>
            </value>
            <value>
                <fullName>Non Lit Flange</fullName>
            </value>
            <value>
                <fullName>Back Lit D/S Signage – Vertical</fullName>
            </value>
            <value>
                <fullName>L Shaped Back Lit Signage</fullName>
            </value>
            <value>
                <fullName>L Shaped Non Lit Signage</fullName>
            </value>
            <value>
                <fullName>Non Lit Standee</fullName>
            </value>
            <value>
                <fullName>Lit Standee</fullName>
            </value>
            <value>
                <fullName>In-Shop Branding</fullName>
            </value>
            <value>
                <fullName>Shop Painting</fullName>
            </value>
            <value>
                <fullName>ACP/LE Signage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>