force-app/main/default/objects/Case__c/fields/Skin_Change_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Skin_Change_Asset_Type__c</fullName>
    <description>Which kind of asset a Skin Change request is re-skinning. Branding Asset points at Branding_Asset__c; Deep Freezer points at Assigned_Asset__c. Exactly one of the two is filled.</description>
    <label>Skin Change Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branding Asset</fullName>
            </value>
            <value>
                <fullName>Deep Freezer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>