force-app/main/default/objects/Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>L1 Approved</fullName>
            </value>
            <value>
                <fullName>L2 Approved</fullName>
            </value>
            <value>
                <fullName>L3 Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Installation Pending</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending for Approval</fullName>
                <isActive>false</isActive>
                <label>Pending for Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>