force-app/main/default/objects/Case__c/fields/Transfer_to__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Transfer to)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>