force-app/main/default/objects/Case__c/fields/Transferred_to_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Transferred_to_warehouse__c</fullName>
    <label>Transferred to warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kirwatti Warehouse</fullName>
            </value>
            <value>
                <fullName>Bangalore Warehouse</fullName>
            </value>
            <value>
                <fullName>Herur Warehouse</fullName>
            </value>
            <value>
                <fullName>Tirupati Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>