force-app/main/default/objects/Case__c/fields/Warehouse_Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Transfer_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse (Transfer From)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Record_type_Name__c</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Warehouse (Transfer From))</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>