force-app/main/default/objects/Case__c/validationRules/NewAssetCode_Only_Alphanumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>NewAssetCode_Only_Alphanumeric</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(New_Asset_Code__c)),
NOT(REGEX(New_Asset_Code__c, &quot;^[0-9]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>New_Asset_Code__c</errorDisplayField>
    <errorMessage>Please enter only numbers (0–9) in Asset Code.Special characters or letters are not allowed.</errorMessage>
</ValidationRule>