force-app/main/default/objects/Case__c/validationRules/OldAssetCo_Required_For_ExistingOutlet.validationRule-meta.xml
<ValidationRule>
    <fullName>OldAssetCo_Required_For_ExistingOutlet</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Case_Type__r.Name = &quot;Existing Outlet New Asset request&quot;,
    ISBLANK(  Old_Asset_Code__c )
)</errorConditionFormula>
    <errorDisplayField>Old_Asset_Code__c</errorDisplayField>
    <errorMessage>Old Asset Code is required when Case Type is &apos;Existing Outlet New Asset Request&apos;.</errorMessage>
</ValidationRule>