force-app/main/default/objects/Case__c/validationRules/OldAssetCode_Only_Alphanumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>OldAssetCode_Only_Alphanumeric</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
    REGEX(Old_Asset_Code__c , &quot;^[a-zA-Z0-9]*$&quot;)
)</errorConditionFormula>
    <errorDisplayField>Old_Asset_Code__c</errorDisplayField>
    <errorMessage>Old Asset Code can only contain letters and numbers. Special characters are not allowed.</errorMessage>
</ValidationRule>