force-app/main/default/objects/Case__c/validationRules/PIN_Code_Numeric_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>PIN_Code_Numeric_Only</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    REGEX(PIN_Code__c , &quot;^[0-9]*$&quot;)
)</errorConditionFormula>
    <errorDisplayField>PIN_Code__c</errorDisplayField>
    <errorMessage>Please enter a valid PIN code using numbers only.</errorMessage>
</ValidationRule>