force-app/main/default/objects/Case__c/validationRules/Return_Case_Completion_Needs_Vendor.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Case_Completion_Needs_Vendor</fullName>
    <active>true</active>
    <description>A branding return case cannot reach Completed until Mahesh has chosen the vendor and recorded what became of the asset. Scoped to the transition with ISCHANGED so a completed case is not trapped by later edits.</description>
    <errorConditionFormula>AND(
  Case_Type__r.Name = &apos;Branding &amp; Marketing Asset transfer Request&apos;,
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &apos;Completed&apos;),
  OR(
    ISBLANK(Vendor__c),
    ISPICKVAL(Branding_Return_Status__c, &apos;&apos;)
  )
)</errorConditionFormula>
    <errorMessage>Select the Vendor and Branding Return Status on this approval page, then approve.</errorMessage>
</ValidationRule>