force-app/main/default/objects/Case__c/validationRules/Return_Status_Transition_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Status_Transition_Lock</fullName>
    <active>true</active>
    <description>Consumed and Damaged are terminal asset states. Once set, the branding return status cannot be changed again; Re Use may still move on to Consumed or Damaged.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Branding_Return_Status__c),
  OR(
    ISPICKVAL(PRIORVALUE(Branding_Return_Status__c), &quot;Consumed&quot;),
    ISPICKVAL(PRIORVALUE(Branding_Return_Status__c), &quot;Damaged&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Branding_Return_Status__c</errorDisplayField>
    <errorMessage>This asset status is final and cannot be changed once it is Consumed or Damaged.</errorMessage>
</ValidationRule>