force-app/main/default/objects/Case__c/validationRules/Return_Vendor_Hub_Must_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Vendor_Hub_Must_Match</fullName>
    <active>true</active>
    <description>A branding return case must go to a vendor in the retailer&apos;s own hub. Enforced here because a lookup filter cannot compare a picklist across objects. Checked only once both vendor and hub are set, so it never blocks an in-progress record.</description>
    <errorConditionFormula>AND(
  Case_Type__r.Name = &quot;Branding &amp; Marketing Asset transfer Request&quot;,
  NOT(ISBLANK(Vendor__c)),
  NOT(ISBLANK(TEXT(Retailer_Hub__c))),
  TEXT(Vendor__r.Hub__c) &lt;&gt; TEXT(Retailer_Hub__c)
)</errorConditionFormula>
    <errorDisplayField>Vendor__c</errorDisplayField>
    <errorMessage>Selected vendor&apos;s hub does not match the retailer&apos;s hub. Choose a vendor mapped to the retailer&apos;s hub.</errorMessage>
</ValidationRule>