force-app/main/default/objects/Case__c/validationRules/Serial_Number_Only_Alphanumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_Only_Alphanumeric</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    REGEX(Serial_Number__c , &quot;^[a-zA-Z0-9]*$&quot;)
)</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>Serial Number can only contain letters and numbers. Special characters are not allowed.</errorMessage>
</ValidationRule>