force-app/main/default/objects/Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open,Pending,L1 Approved,L2 Approved,L3 Approved,Approved,Installation Pending,Installed,Reject,Completed,Closed</value>
    </filters>
    <label>All</label>
</ListView>